Put in CSS for doors. Still need to fix positioning issues. Position absolute blows up the spacing.

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
 
+html, body, .splash {
+   margin: 0;
+   padding: 0;
+   bottom: 0;
+}
+
 body {
     background-color: rgb(238, 108, 221);
     display: flex;
     flex-direction: column;
-    margin: 0px;
     height: 100vh;
 }
 
@@ -13,14 +18,36 @@ div {
 }
 
 .splash {
-    position: absolute;
     width: 100vw;
-    height: 100vh;
+    position: absolute;
     background-color: black;
     opacity: 100%;
     z-index: 0;
 }
 
+.door2 {
+    height: 700px;
+    width: 400px;
+    margin-left: 30vw;
+}
+
+.door1 {
+    height: 700px;
+    width: 400px;
+    
+}
+
+.door1:hover {
+    cursor: pointer;
+    opacity: 0%;
+    z-index: -1;
+}
+
+.door2:hover {
+    cursor: pointer;
+    opacity: 100%;
+    z-index: 10;
+}
 
 @keyframes fadeOut {
     0% {
@@ -60,22 +87,20 @@ ul {
     0% {
         transfrom: translate (0px, 20px);
         opacity: 50%;
-        height: 200px;
-        width: 200px;
     }
 
     100% {
         transfrom: translate (0px, 0px);
         opacity: 100%;
-        height: 300px;
-        width: 300px;
+        height: 450px;
+        width: 450px;
     }
     
 }
 
 .card {
-    height: 200px;
-    width: 200px;
+    height: 300px;
+    width: 300px;
     background-color: aliceblue;
 }
 
